@@ -42,7 +42,7 @@ bts - developers' command line interface to the BTS
 
 =cut
 
-use 5.006_000;
+use 5.010; # for defined-or
 use strict;
 use warnings;
 use File::Basename;
@@ -59,6 +59,9 @@ use Devscripts::Debbugs;
 use Fcntl qw(O_RDWR O_RDONLY O_CREAT F_SETFD);
 use Getopt::Long;
 use Encode;
+# Need support for ; as query param separator
+use URI 1.37;
+use URI::QueryParam;
 
 use Scalar::Util qw(looks_like_number);
 use POSIX qw(locale_h strftime);
@@ -3476,24 +3479,25 @@ sub href_to_filename {
     my $href = $_[0];
     my ($msg, $filename);
 
-    if ($href =~ m%\[<a(?: class=\".*?\")? href="(?:/cgi-bin/)?bugreport\.cgi([^\?]*)\?([^\"]*);bug=(\d+)">.*?\(([^,]*), .*?\)\]%) {
+    if ($href =~ m%\[<a(?: class=\".*?\")? href="((?:/cgi-bin/)?bugreport\.cgi([^\?]*)\?[^\"]*)">.*?\(([^,]*), .*?\)\]%) {
 	# this looks like an attachment; $4 should give the MIME-type
-	my $urlfilename = $1;
-	my $ref = $2;
-	my $bug = $3;
-	my $mimetype = $4;
-	$ref =~ s/&(?:amp;)?/;/g;  # normalise all hrefs
+	my $uri = URI->new($1);
+	my $urlfilename = $2;
+	my $bug = $uri->query_param_delete('bug');
+	my $mimetype = $3;
 
-	return undef unless $ref =~ /msg=(\d+);(filename=[^;]*;)?att=(\d+)/;
-	$msg = "$1-$3";
-	$urlfilename ||= "$2" if defined $2;
-	$urlfilename ||= "";
+	my $ref = $uri->query();
+	$ref =~ s/&(?:amp;)?/;/g;  # normalise all hrefs
+	$uri->query($ref);
+
+	$msg = $uri->query_param('msg');
+	my $att = $uri->query_param('att');
+	return undef unless $msg && $att;
+	$msg .= "-$att";
+	$urlfilename ||= $att // '';
 
 	my $fileext = '';
 	if ($urlfilename =~ m%^/%) {
-	    $filename = basename($urlfilename);
-	} elsif ($urlfilename =~ m%^filename=([^;]*?);%) {
-	    $urlfilename = $1;
 	    $filename = basename($urlfilename);
 	} else {
 	    $filename = '';
@@ -3506,36 +3510,45 @@ sub href_to_filename {
 	    $filename = "$bug/$msg$fileext";
 	}
     }
-    elsif ($href =~ m%<a(?: class=\".*?\")? href="(?:/cgi-bin/)?bugreport\.cgi([^\?]*)\?([^"]*);?bug=(\d+)(.*?)".*?>%) {
-	my $urlfilename = $1;
-	my $ref = $2;
-	my $bug = $3;
-	$ref .= $4 if defined $4;
+    elsif ($href =~ m%<a(?: class=\".*?\")? href="((?:/cgi-bin/)?bugreport\.cgi([^\?]*)\?([^"]*))".*?>%) {
+	my $uri = URI->new($1);
+	my $urlfilename = $2;
+	my $bug = $uri->query_param_delete('bug');
+	$msg = $uri->query_param_delete('msg');
+
+	my $ref = $uri->query // '';
 	$ref =~ s/&(?:amp;)?/;/g;  # normalise all hrefs
 	$ref =~ s/;archive=(yes|no)\b//;
 	$ref =~ s/%3D/=/g;
+	$uri->query($ref);
 
-	if ($ref =~ /msg=(\d+);$/) {
-	    $msg = $1;
-	    $filename = "$bug/$1.html";
+	my %params = (
+	    mboxstatus => '', mboxstat => '', mboxmaint => '', mbox => '',
+	    $uri->query_form(),
+	);
+
+	if ($msg && !%params) {
+	    $filename = File::Spec->catfile($bug, "$msg.html");
 	}
-	elsif ($ref =~ /msg=(\d+);mbox=yes;$/) {
-	    $msg = "$1-mbox";
-	    $filename = "$bug/$1.mbox";
-	}
-	elsif ($ref =~ /^mbox=yes;$/) {
-	    $msg = 'rawmbox';
-	    $filename = "$bug.raw.mbox";
-	}
-	elsif ($ref =~ /mboxstat(us)?=yes/) {
+	elsif (($params{mboxstat} || $params{mboxstatus}) eq 'yes') {
 	    $msg = 'statusmbox';
 	    $filename = "$bug.status.mbox";
 	}
-	elsif ($ref =~ /mboxmaint=yes/) {
+	elsif ($params{mboxmaint} eq 'yes') {
 	    $msg = 'mbox';
 	    $filename = "$bug.mbox";
 	}
-	elsif ($ref eq '') {
+	elsif ($params{mbox} eq 'yes') {
+	    if ($msg) {
+		$filename = "$bug/$msg.mbox";
+		$msg .= '-mbox';
+	    }
+	    else {
+		$filename = "$bug.raw.mbox";
+		$msg = 'rawmbox';
+	    }
+	}
+	elsif (!$ref) {
 	    return undef;
 	}
 	else {
@@ -3544,29 +3557,30 @@ sub href_to_filename {
 	    return undef;
 	}
     }
-    elsif ($href =~ m%<a[^>]* href=\"(?:/cgi-bin/)?version\.cgi([^>]+><img[^>]* src=\"(?:/cgi-bin/)?version\.cgi)?\?([^\"]+)\">%i) {
-	my $refs = $2;
-	$refs = $1 if not defined $refs;
+    elsif ($href =~ m%<(?:a[^>]* href|img [^>]* src)="((?:/cgi-bin/)?version\.cgi\?[^"]+)"[^>]*>%i) {
+	my $uri = URI->new($1);
+	my %params = $uri->query_form();
 
-	# Remove package= and make sure the package name is at the
-	# start of the filename
-	$refs =~ s/(.*?)package=(.*?)(;.*?|)$/$2;$1$3/;
-	# Package versions
-	$refs =~ s/;found=/.f./g;
-	$refs =~ s/;fixed=/.fx./g;
+	if ($params{package}) {
+	    $filename .= $params{package};
+	}
+	if ($params{found}) {
+	    $filename .= ".f.$params{found}";
+	}
+	if ($params{fixed}) {
+	    $filename .= ".fx.$params{fixed}";
+	}
+	if ($params{collapse}) {
+	    $filename .= '.co';
+	}
+
 	# Replace encoded "/" and "," characters with "."
-	$refs =~ s/%2[FC]/./g;
+	$filename =~ s@(?:%2[FC]|/|,)@.@gi;
 	# Remove encoded spaces
-	$refs =~ s/\+//g;
-	# Is this a "collapsed" graph?
-	$refs =~ s/;collapse=1(.*)/$1.co/;
-	# Remove any other parameters
-	$refs =~ s/(^|;)(\w+)=\d+//g;
-	# and tidy up any remaining separators
-	$refs =~ s/;//g;
+	$filename =~ s/\+//g;
 
 	$msg = 'versions';
-	$filename = "$refs.png";
+	$filename .= '.png';
     }
     else {
 	return undef;
